--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
-		<accessrules>
-			<accessrule kind="accessible" pattern="javafx/**"/>
-		</accessrules>
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
-	<classpathentry kind="lib" path="packages/jackson-databind-2.9.8.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-core-2.8.9.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-databind-2.8.9.jar"/>
+	<classpathentry kind="lib" path="lib/jackson-annotations-2.8.9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
