--- a/.classpath
+++ b/.classpath
@@ -4,11 +4,15 @@
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
+		<accessrules>
+			<accessrule kind="accessible" pattern="javafx/**"/>
+		</accessrules>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="lib/jackson-core-2.8.9.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-databind-2.8.9.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-annotations-2.8.9.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
