--- a/.classpath
+++ b/.classpath
@@ -13,7 +13,11 @@
 	<classpathentry exported="true" kind="lib" path="lib/jackson-core-2.8.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-databind-2.8.9.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jackson-annotations-2.8.9.jar"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_201"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 8 201"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
